# be_diamonds

./: .gitignore  README.md  diamonds.py  main.py  main2.py  main3.py  pyproject.toml
.nicegui/: storage-user-ce21e67e-2169-4af6-9b75-79ff2cb837eb.json
logs/: df_output.txt
src/: auth.py  constants.json  constants.py  data.py  gui.tcss  help_md.py  main.py  screens.py  sheet_name.json  sheet_name.yaml  ss.py  utils.py
tests/: conftest.py  test_data.py
