[tool.poetry]
name = "be-diamonds"
version = "0.1.0"
description = ""
authors = ["Josh <jdickman@cenic.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
smartsheet-python-sdk = "^3.0.2"
validators = "^0.22.0"
pathlib = "^1.0.1"
textual = "^0.46.0"
auto-mix-prep = "^0.2.0"
keyring = "^24.3.0"
pytz = "^2023.3.post1"
tabulate = "^0.9.0"
nicegui = "^1.4.18"


[tool.poetry.group.dev.dependencies]
textual-dev = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
